@@ -3,7 +3,7 @@
 byobu \- wrapper script for seeding a user's byobu configuration and launching a text based window manager (either screen or tmux)
 
 .SH SYNOPSIS
-\fBbyobu\fP [screen options]
+\fBbyobu\fP [options]
 
 \fBbyobu\-screen\fP [screen options]
 
